[package]
name = "hello_cargo"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[dependencies]
rand ="0.8.5"


[[bin]]
name = "main"
path = "src/main.rs"

[[bin]]
name = "guess_game"
path = "src/bins/guess_game.rs"

[[bin]]
name = "variables"
path = "src/bins/variables.rs"

[[bin]]
name = "functions"
path = "src/bins/functions.rs"